# uploader

./: CMakeLists.txt  Component.cpp  Component.h  UploaderApplication.cpp  UploaderApplication.h  main.cpp  script  uploader.cpp
application/: VideoApplication.cpp  VideoApplication.h
include/uploader/: AuthService.h  Component.h  StatusApplication.h  StatusService.h  UploaderApplication.h  UploaderService.h  VideoApplication.h
include/uploader/media/: FFmpeg.h  Shaka.h
lib/include/: picojson.h
lib/include/jwt-cpp/: base.h  jwt.h
lib/include/packager/: ad_cue_generator_params.h  buffer_callback_params.h  chunking_params.h  crypto_params.h  hls_params.h  mp4_output_params.h  mpd_params.h  packager.h  status.h
lib/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  logger-inl.h  logger.h  spdlog-inl.h  spdlog.h
lib/include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h  log_levels.h
lib/include/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  pattern_formatter-inl.h  pattern_formatter.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h
lib/include/spdlog/fmt/: bin_to_hex.h  fmt.h
lib/include/spdlog/sinks/: sink.h  (+24 more)
media/: FFmpeg.cpp  FFmpeg.h  Shaka.cpp  Shaka.h
service/: UploaderService.cpp  UploaderService.h
src/: AuthService.cpp  CMakeLists.txt  Component.cpp  FFmpeg.cpp  Shaka.cpp  StatusApplication.cpp  StatusService.cpp  UploaderApplication.cpp  UploaderService.cpp  VideoApplication.cpp  main.cpp
src/media/: CMakeLists.txt  FFmpeg.cpp  Shaka.cpp
test/: CMakeLists.txt  JwtAuthTest.cpp
(+11 files in other folders)
